--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "axios": "^1.4.0",
     "eslint": "^8.42.0",
     "nuxt": "^3.5.2",
+    "nuxt-link-checker": "^1.0.4",
+    "nuxt-simple-robots": "^2.3.0",
+    "nuxt-simple-sitemap": "^2.6.2",
     "typescript": "^5.0.4"
   }
 }
